Apply suggestions from code review
Co-authored-by: Davi Henrique <dangerousplay715@gmail.com>